feat: formatted name, added type grouping +colors +more formatting

--- a/index.html
+++ b/index.html
@@ -23,21 +23,29 @@
                 </div>
 
                 <div class="types-display">
-                    <p>types</p>
-
+                    <p style="font-weight: bold;">Types:</p>
+                    <div id="pokemon-types"></div>
                 </div>
     
                 <div class="arrow-buttons">
-                    <p>arrow buttons</p>
-                    <img src="images/left_arrow.svg" alt="Left arrow">
-                    <img src="images/right_arrow.svg" alt="Right arrow">
+                    <!-- want these to be 2 buttons, with span in the middle, center based on parent -->
+                    <button id="left-button">
+                        <img src="images/left_arrow.svg" alt="Left arrow">
+                    </button>
+
+                    <button id="right-button">
+                        <img src="images/right_arrow.svg" alt="Right arrow">
+                    </button>
                 </div>
             </div>
 
             <div class="info-container">
-                <p id="info-title">Info</p>
+                <h2 id="info-title">Info</h2>
+
                 <div class="info-display">
-                    <p>info box</p> 
+                    <div class="info-box">
+                        <p>info box</p> 
+                    </div>
                 </div>
 
                <p>info button</p>
