feat: arrow-buttons functioning +info section formatting+ fetching

--- a/index.html
+++ b/index.html
@@ -44,7 +44,14 @@
 
                 <div class="info-display">
                     <div class="info-box">
-                        <p>info box</p> 
+                        <p id="pokemon-height"></p>
+                        <p id="pokemon-weight"></p>
+                        <p id="pokemon-hp"></p>
+                        <p id="pokemon-attack"></p>
+                        <p id="pokemon-defense"></p>
+                        <p id="pokemon-spatk"></p>
+                        <p id="pokemon-spdf"></p>
+                        <p id="pokemon-speed"></p>
                     </div>
                 </div>
 
