feat: implemented info/moves fetching+ formatting +info/moves buttons+ functionality +currentview status switching +fixing formatting for containers +mobile responsiveness at 768px

--- a/index.html
+++ b/index.html
@@ -44,19 +44,23 @@
 
                 <div class="info-display">
                     <div class="info-box">
-                        <p id="pokemon-height"></p>
+                        <!-- <p id="pokemon-height"></p>
                         <p id="pokemon-weight"></p>
                         <p id="pokemon-hp"></p>
                         <p id="pokemon-attack"></p>
                         <p id="pokemon-defense"></p>
                         <p id="pokemon-spatk"></p>
                         <p id="pokemon-spdf"></p>
-                        <p id="pokemon-speed"></p>
+                        <p id="pokemon-speed"></p> -->
                     </div>
                 </div>
 
-               <p>info button</p>
-               <p>moves button</p>
+                <div class="info-moves-buttons">
+                    <button id="info-button">Info</button>
+                    
+                    <button id="moves-button">Moves</button>
+                </div>
+
             </div>
         </div>
 
